--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 ################################################################################
 
 /backend/.vs/VSWorkspaceState.json
+/backend/.vs
+/.vs/WhoIsPlaying/v15/Server/sqlite3/storage.ide-wal
+/.vs/WhoIsPlaying/v15/Server/sqlite3/storage.ide-shm
+/.vs/WhoIsPlaying/v15/Server/sqlite3/storage.ide
+/.vs/WhoIsPlaying/v15/Server/sqlite3/db.lock
